--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
+    "driver.js": "^0.9.8",
     "echarts": "^4.8.0",
     "element-ui": "^2.13.1",
     "js-cookie": "^2.2.1",
@@ -19,11 +21,14 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "path-to-regexp": "^6.1.0",
+    "quill": "^1.3.7",
     "screenfull": "^5.0.2",
     "throttle-debounce": "^2.1.0",
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.17.6",
+    "vue-markdown": "^2.2.4",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
