--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -30,6 +30,7 @@
     "vue-markdown": "^2.2.4",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.6",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@vue/cli-service": "^4.3.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.3",
