--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -24,12 +24,15 @@
     "quill": "^1.3.7",
     "screenfull": "^5.0.2",
     "throttle-debounce": "^2.1.0",
+    "video.js": "^7.8.4",
     "vue": "^2.6.11",
+    "vue-baberrage": "^3.2.4",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.17.6",
     "vue-markdown": "^2.2.4",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.6",
+    "vue-video-player": "^5.0.2",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3"
   },
