--- a/vue-admin/package.json
+++ b/vue-admin/package.json
@@ -15,6 +15,7 @@
     "driver.js": "^0.9.8",
     "echarts": "^4.8.0",
     "element-ui": "^2.13.1",
+    "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
@@ -22,6 +23,7 @@
     "path": "^0.12.7",
     "path-to-regexp": "^6.1.0",
     "quill": "^1.3.7",
+    "recordrtc": "^5.6.1",
     "screenfull": "^5.0.2",
     "throttle-debounce": "^2.1.0",
     "video.js": "^7.8.4",
